[gd_scene load_steps=4 format=3 uid="uid://cfcaqnvp65cpn"]

[ext_resource type="Script" uid="uid://dcujdmm74ulqf" path="res://Scenes/UI/menu.gd" id="1_nhmg3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_nhmg3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.6, 0.6, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 1, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("2")
text = "Continue"
flat = true

[node name="NewGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.6, 0.6, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 1, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("2")
text = "New Game"
flat = true

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.6, 0.6, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 1, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("2")
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_colors/font_focus_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_pressed_color = Color(1, 0.6, 0.6, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("2")
text = "Quit"
flat = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
